--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,17 +1,27 @@
-#game-board {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    gap: 10px;
-    width: 300px;
+#gameboard {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     height: 300px;
-    margin: auto;
+    justify-content: center;
 }
 
-#game-board div {
+.square {
+    display: flex;
+    flex-wrap: wrap;
+    float: left;
     border: 1px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2em;
+    width: 25%;
+    height: 30%;
+    text-align: center;
+    font-size: 80px;
+}
+
+#controls, #message {
+    text-align: center;
+    margin: 20px 0;
 }
