--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,24 +1,37 @@
-#gameboard {
+* {
+    padding: 0px;
+    margin: 0px;
+}
+
+#container {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    height: 300px;
+    margin-top: 50px;
+}
+
+#gameboard {
+    display: grid;
+    grid-template-columns: 200px 200px 200px;
+    grid-template-rows: 200px 200px 200px;
     justify-content: center;
+    border: 2px solid black;
+    border-radius: 5px;
 }
 
 .square {
-    display: flex;
-    flex-wrap: wrap;
-    float: left;
-    border: 1px solid black;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 54px;
+    background-color: #d6d6d6;
+    color: #12232E;
+    border: none;
+    border-radius: 0px;
+    border: 2px solid black;
+    outline: none;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 25%;
-    height: 30%;
     text-align: center;
-    font-size: 80px;
 }
 
 #controls, #message {
