--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,20 +1,47 @@
 * {
     padding: 0px;
     margin: 0px;
+    background-color: #e2e8f0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#header {
+    display: flex;
+    flex-direction: row;
+    background-color: black;
+    color: white;
+    padding: 15px;
+}
+
+#header > h1 {
+    background-color: black;
+    font-size: 25px;
+}
+
+#playerTurn {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+    font-size: 20px;
+    font-weight: 500;
 }
 
 #container {
     display: flex;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 0px;
 }
 
 #gameboard {
     display: grid;
-    grid-template-columns: 200px 200px 200px;
-    grid-template-rows: 200px 200px 200px;
+    grid-template-columns: 170px 170px 170px;
+    grid-template-rows: 170px 170px 170px;
     justify-content: center;
-    border: 1px solid black;
+    border: .8px solid #94a3b8;
+    border-radius: 10px;
+    overflow: hidden;
+    background: #94a3b8;
+    color: #020617;
 }
 
 .square {
@@ -25,12 +52,32 @@
     color: #12232E;
     border: none;
     border-radius: 0px;
-    border: 1px solid black;
+    border: .8px solid #94a3b8;
     outline: none;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+    transition: all .4s ease-in-out;
+}
+
+#square-0 {
+    border-top-left-radius: 9px;
+}
+#square-2 {
+    border-top-right-radius: 9px;
+}
+#square-6 {
+    border-bottom-left-radius: 9px;
+}
+#square-8 {
+    border-bottom-right-radius: 9px;
+}
+
+.square:hover {
+    background-color: #94a3b8;
+    color: white;
+    cursor: pointer;
 }
 
 #controls, #message {
