--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,7 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+
 #header {
     display: flex;
     flex-direction: row;
@@ -34,8 +35,8 @@
 
 #gameboard {
     display: grid;
-    grid-template-columns: 170px 170px 170px;
-    grid-template-rows: 170px 170px 170px;
+    grid-template-columns: 120px 120px 120px;
+    grid-template-rows: 120px 120px 120px;
     justify-content: center;
     border: .8px solid #94a3b8;
     border-radius: 10px;
@@ -83,4 +84,25 @@
 #controls, #message {
     text-align: center;
     margin: 20px 0;
+}
+
+#restartButton {
+    background-color: #12232E;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: all .4s ease-in-out;
+}
+
+#restartButton:hover {
+    background-color: #94a3b8;
+    color: #12232E;
+}
+
+#restartButton:active {
+    transform: scale(.95);
 }
